...
    },
    "Saved places · old data": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "保存済みの場所 · 古い情報"
          }
        }
      }
    },
    "Distance needs location": {
      "localizations": {
...
